added event list activity and mvp for it

--- a/app/src/main/res/drawable/splash_background.xml
+++ b/app/src/main/res/drawable/splash_background.xml
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:drawable="@color/colorPrimaryDark"/>
-
+     <item
+         android:drawable="@drawable/eventz_logo"
+         android:width="200dp"
+         android:height="100dp"
+         android:gravity="center">
+     </item>
     </layer-list>
