attach and detach of views to presenters in all activities and some improvements on detailsactivity gui

--- a/app/src/main/res/layout/activity_event_details.xml
+++ b/app/src/main/res/layout/activity_event_details.xml
@@ -17,14 +17,17 @@
         app:collapsedTitleTextAppearance="@style/Toolbar.TitleText"
         app:layout_scrollFlags="scroll|exitUntilCollapsed"
         app:contentScrim="@color/colorPrimary"
-        app:expandedTitleTextAppearance="@android:color/transparent"
+        app:expandedTitleTextAppearance="@style/TextAppearance.Design.CollapsingToolbar.Expanded.TitleText"
         android:fitsSystemWindows="true">
+
         <ImageView
+            android:fadingEdge="horizontal"
+            android:fadingEdgeLength="@dimen/DetailsImageViewFadingEdge"
+            android:contentDescription="@string/details_image"
+            android:id="@+id/event_logo"
             android:layout_width="match_parent"
             android:layout_height="350dp"
-            app:layout_collapseMode="parallax"
-            android:src="@drawable/party_temp"
-            android:scaleType="centerCrop"/>
+            app:layout_collapseMode="parallax" />
         <android.support.v7.widget.Toolbar
             android:layout_width="match_parent"
             android:layout_height="?android:attr/actionBarSize"
@@ -33,7 +36,51 @@
             app:titleTextColor="@color/colorPrimaryLight"
             app:layout_collapseMode="pin">
         </android.support.v7.widget.Toolbar>
-    </android.support.design.widget.CollapsingToolbarLayout>
-</android.support.design.widget.AppBarLayout>
 
+    </android.support.design.widget.CollapsingToolbarLayout>
+
+</android.support.design.widget.AppBarLayout>
+       <android.support.v4.widget.NestedScrollView
+           android:layout_width="match_parent"
+           android:layout_height="match_parent"
+           android:id="@+id/nested_scroll_view"
+           android:padding="@dimen/detailsPadding"
+           app:layout_behavior="@string/appbar_scrolling_view_behavior">
+           <RelativeLayout
+               android:layout_width="match_parent"
+               android:layout_height="match_parent"
+               android:padding="@dimen/detailsPadding">
+           <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/event_date"
+                android:layout_marginTop="@dimen/detailsInfoTopMargin"
+                android:textAppearance="@style/textDetailsDate"
+                android:gravity="center"
+                />
+           <TextView
+               android:layout_width="match_parent"
+               android:layout_height="wrap_content"
+               android:id="@+id/event_name"
+               android:layout_below="@+id/event_date"
+               android:layout_marginTop="@dimen/detailsInfoTopMargin"
+               android:textAppearance="@style/textDetailsEventName"/>
+               <TextView
+                   android:layout_width="match_parent"
+                   android:layout_height="wrap_content"
+                   android:layout_marginTop="@dimen/detailsInfoTopMargin"
+                   android:id="@+id/event_description"
+                   android:layout_below="@id/event_name"
+                   android:textAppearance="@style/textDetailsEventDescription"
+                   />
+           </RelativeLayout>
+       </android.support.v4.widget.NestedScrollView>
+    <ProgressBar
+        android:layout_width="@dimen/smallProgressBarWidth"
+        android:layout_height="@dimen/smallProgressbarHeight"
+        android:id="@+id/progress_bar"
+        android:layout_gravity="center"
+        style="@style/Base.Widget.AppCompat.ProgressBar"
+        android:indeterminateTint="@color/colorAccent"
+        />
 </android.support.design.widget.CoordinatorLayout>
