--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,5 +9,6 @@
     <color name="icons">#212121</color>
     <color name="divider">#BDBDBD</color>
     <color name="white">#ffffff</color>
+    <color name="primaryDarkTransparent">#A0FFA000</color>
 </resources>
 
