--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -3,10 +3,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-  <ListView
-      android:layout_width="match_parent"
-      android:layout_height="match_parent"
-      android:id="@+id/category_list"/>
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/category_recycler_list"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+
+        />
 
 
 </RelativeLayout>
