--- a/app/src/main/res/layout/activity_event_details.xml
+++ b/app/src/main/res/layout/activity_event_details.xml
@@ -27,7 +27,8 @@
             android:id="@+id/event_logo"
             android:layout_width="match_parent"
             android:layout_height="350dp"
-            app:layout_collapseMode="parallax" />
+            app:layout_collapseMode="parallax" >
+        </ImageView>
         <android.support.v7.widget.Toolbar
             android:layout_width="match_parent"
             android:layout_height="?android:attr/actionBarSize"
@@ -71,6 +72,7 @@
                    android:layout_marginTop="@dimen/detailsInfoTopMargin"
                    android:id="@+id/event_description"
                    android:layout_below="@id/event_name"
+                   android:layout_margin="@dimen/detailsDescriptionMargin"
                    android:textAppearance="@style/textDetailsEventDescription"
                    />
            </RelativeLayout>
