--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,4 +6,5 @@
     <dimen name="smallProgressBarWidth">50dp</dimen>
     <dimen name="DetailsImageViewFadingEdge">40dp</dimen>
     <dimen name="recycler_text_size">15sp</dimen>
+    <dimen name="detailsDescriptionMargin">5dp</dimen>
 </resources>
