--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/category_recycler_list"
@@ -9,6 +10,15 @@
         android:layout_height="wrap_content"
 
         />
-
+    <android.support.design.widget.FloatingActionButton
+        android:layout_width="@dimen/fabWidth"
+        android:layout_height="@dimen/fabHeight"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_margin="@dimen/fabMargin"
+        android:id="@+id/floating_action_button"
+        android:src="@drawable/ic_fab"
+        android:elevation="3dp"/>
 
 </RelativeLayout>
