--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -11,8 +11,9 @@
     <dimen name="editTextWidth">140dp</dimen>
     <dimen name="editTextHorizontalMargin">15dp</dimen>
     <dimen name="editTextMarginTop">10dp</dimen>
-    <dimen name="editEventDescriptionHeight">100dp</dimen>
-    <dimen name="fabWidth">50dp</dimen>
-    <dimen name="fabHeight">50dp</dimen>
+    <dimen name="editEventDescriptionHeight">200dp</dimen>
+    <dimen name="fabWidth">56dp</dimen>
+    <dimen name="fabHeight">56dp</dimen>
     <dimen name="fabMargin">20dp</dimen>
+    <dimen name="createPadding">5dp</dimen>
 </resources>
