--- a/app/src/main/res/layout/activity_followed_events.xml
+++ b/app/src/main/res/layout/activity_followed_events.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".followedevents.FollowedEventsActivity">
+    tools:context=".followed.FollowedEventsActivity">
 
     <include layout="@layout/toolbar"/>
 
