--- a/app/src/main/res/layout/activity_followed_events.xml
+++ b/app/src/main/res/layout/activity_followed_events.xml
@@ -13,7 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/followed_events"
-        android:layout_below="@+id/toolbar">
+        android:layout_below="@id/toolbar">
 
     </android.support.v7.widget.ListViewCompat>
     <android.support.v4.widget.ContentLoadingProgressBar
