--- a/app/src/main/res/layout-v21/activity_home.xml
+++ b/app/src/main/res/layout-v21/activity_home.xml
@@ -10,7 +10,7 @@
         android:id="@+id/category_recycler_list"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/toolbar"
+        android:layout_below="@id/toolbar"
         />
     <android.support.design.widget.FloatingActionButton
         android:layout_width="@dimen/fabWidth"
