--- a/app/src/main/res/layout/activity_event_details.xml
+++ b/app/src/main/res/layout/activity_event_details.xml
@@ -1,98 +1,100 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_height="match_parent">
 
-<android.support.design.widget.AppBarLayout
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-    android:fitsSystemWindows="true">
-    <android.support.design.widget.CollapsingToolbarLayout
+    <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
-        android:layout_height="350dp"
-        android:id="@+id/collapsing_toolbar_layout"
-        app:collapsedTitleTextAppearance="@style/Toolbar.TitleText"
-        app:layout_scrollFlags="scroll|exitUntilCollapsed"
-        app:contentScrim="@color/colorPrimary"
-        app:expandedTitleTextAppearance="@style/TextAppearance.Design.CollapsingToolbar.Expanded.TitleText"
-        android:fitsSystemWindows="true">
+        android:layout_height="wrap_content"
+        android:fitsSystemWindows="true"
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
-        <ImageView
-            android:fadingEdge="horizontal"
-            android:fadingEdgeLength="@dimen/DetailsImageViewFadingEdge"
-            android:contentDescription="@string/details_image"
-            android:id="@+id/event_logo"
+        <android.support.design.widget.CollapsingToolbarLayout
+            android:id="@+id/collapsing_toolbar_layout"
             android:layout_width="match_parent"
             android:layout_height="350dp"
-            app:layout_collapseMode="parallax" >
-        </ImageView>
-        <android.support.v7.widget.Toolbar
+            android:fitsSystemWindows="true"
+            app:collapsedTitleTextAppearance="@style/Toolbar.TitleText"
+            app:contentScrim="@color/colorPrimary"
+            app:expandedTitleTextAppearance="@style/TextAppearance.Design.CollapsingToolbar.Expanded.TitleText"
+            app:layout_scrollFlags="scroll|exitUntilCollapsed">
+
+            <ImageView
+                android:id="@+id/event_logo"
+                android:layout_width="match_parent"
+                android:layout_height="350dp"
+                android:contentDescription="@string/details_image"
+                android:fadingEdge="horizontal"
+                android:fadingEdgeLength="@dimen/DetailsImageViewFadingEdge"
+                app:layout_collapseMode="parallax" />
+
+            <android.support.v7.widget.Toolbar
+                android:id="@+id/toolbar"
+                android:layout_width="match_parent"
+                android:layout_height="?android:attr/actionBarSize"
+                app:layout_collapseMode="pin"
+                app:popupTheme="@style/Base.ThemeOverlay.AppCompat.Light"
+                app:titleTextColor="@color/colorPrimaryLight" />
+
+        </android.support.design.widget.CollapsingToolbarLayout>
+
+    </android.support.design.widget.AppBarLayout>
+
+    <android.support.v4.widget.NestedScrollView
+        android:id="@+id/nested_scroll_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:padding="@dimen/detailsPadding"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
+
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="?android:attr/actionBarSize"
-            android:id="@+id/toolbar"
-            app:popupTheme="@style/Base.ThemeOverlay.AppCompat.Light"
-            app:titleTextColor="@color/colorPrimaryLight"
-            app:layout_collapseMode="pin">
-        </android.support.v7.widget.Toolbar>
+            android:layout_height="match_parent"
+            android:padding="@dimen/detailsPadding">
 
-    </android.support.design.widget.CollapsingToolbarLayout>
-
-</android.support.design.widget.AppBarLayout>
-       <android.support.v4.widget.NestedScrollView
-           android:layout_width="match_parent"
-           android:layout_height="match_parent"
-           android:id="@+id/nested_scroll_view"
-           android:padding="@dimen/detailsPadding"
-           app:layout_behavior="@string/appbar_scrolling_view_behavior">
-           <RelativeLayout
-               android:layout_width="match_parent"
-               android:layout_height="match_parent"
-               android:padding="@dimen/detailsPadding">
-           <TextView
+            <TextView
+                android:id="@+id/event_date"
                 android:layout_width="@dimen/date_width"
                 android:layout_height="wrap_content"
-                android:id="@+id/event_date"
                 android:layout_marginTop="@dimen/detailsInfoTopMargin"
-                android:textAppearance="@style/textDetailsDate"
                 android:gravity="center"
-                />
+                android:textAppearance="@style/textDetailsDate" />
 
-               <ImageButton
-                   android:id="@+id/follow_button"
-                   android:layout_width="@dimen/followWidth"
-                   android:layout_height="@dimen/followHeight"
-                   android:layout_alignParentEnd="true"
-                   android:layout_alignTop="@+id/event_date"
-                   android:layout_alignParentRight="true"
-                   android:background="@color/transparentGray"
-                   android:src="@drawable/ic_follow"/>
-           <TextView
-               android:layout_width="match_parent"
-               android:layout_height="wrap_content"
-               android:id="@+id/event_name"
-               android:layout_below="@+id/event_date"
-               android:layout_marginTop="@dimen/detailsInfoTopMargin"
-               android:textAppearance="@style/textDetailsEventName"/>
-               <TextView
-                   android:layout_width="match_parent"
-                   android:layout_height="wrap_content"
-                   android:layout_marginTop="@dimen/detailsInfoTopMargin"
-                   android:id="@+id/event_description"
-                   android:layout_below="@id/event_name"
-                   android:layout_margin="@dimen/detailsDescriptionMargin"
-                   android:textAppearance="@style/textDetailsEventDescription"
-                   />
-           </RelativeLayout>
-       </android.support.v4.widget.NestedScrollView>
+            <ImageButton
+                android:id="@+id/follow_button"
+                android:layout_width="@dimen/followWidth"
+                android:layout_height="@dimen/followHeight"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
+                android:layout_alignTop="@+id/event_date"
+                android:background="@color/transparentGray"
+                android:src="@drawable/ic_follow_unchecked" />
+
+            <TextView
+                android:id="@+id/event_name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/event_date"
+                android:layout_marginTop="@dimen/detailsInfoTopMargin"
+                android:textAppearance="@style/textDetailsEventName" />
+
+            <TextView
+                android:id="@+id/event_description"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/event_name"
+                android:layout_margin="@dimen/detailsDescriptionMargin"
+                android:layout_marginTop="@dimen/detailsInfoTopMargin"
+                android:textAppearance="@style/textDetailsEventDescription" />
+        </RelativeLayout>
+    </android.support.v4.widget.NestedScrollView>
+
     <ProgressBar
+        android:id="@+id/progress_bar"
+        style="@style/Base.Widget.AppCompat.ProgressBar"
         android:layout_width="@dimen/smallProgressBarWidth"
         android:layout_height="@dimen/smallProgressbarHeight"
-        android:id="@+id/progress_bar"
         android:layout_gravity="center"
-        style="@style/Base.Widget.AppCompat.ProgressBar"
-        android:indeterminateTint="@color/colorAccent"
-        />
+        android:indeterminateTint="@color/colorAccent" />
 </android.support.design.widget.CoordinatorLayout>
