--- a/app/src/main/res/layout/activity_create_event.xml
+++ b/app/src/main/res/layout/activity_create_event.xml
@@ -54,7 +54,8 @@
             android:layout_marginEnd="@dimen/editTextHorizontalMargin"
             android:layout_marginStart="@dimen/editTextHorizontalMargin"
             android:layout_marginTop="@dimen/editTextMarginTop"
-            android:hint="@string/enterEventName" />
+            android:hint="@string/enterEventName"
+            android:inputType="" />
 
         <TextView
             android:id="@+id/event_description_label"
@@ -91,7 +92,7 @@
             android:layout_marginTop="@dimen/editTextMarginTop"
             android:orientation="horizontal">
 
-            <android.support.v7.widget.AppCompatButton
+            <android.widget.Button
                 android:id="@+id/set_date_button"
                 android:layout_width="0dp"
                 android:layout_height="40dp"
@@ -101,7 +102,7 @@
                 android:background="@color/colorPrimaryDark"
                 android:text="@string/buttonSetDate" />
 
-            <android.support.v7.widget.AppCompatButton
+            <android.widget.Button
                 android:id="@+id/set_time_button"
                 android:layout_width="0dp"
                 android:layout_height="40dp"
